# dbcrust

./: .cz.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  conftest.py  dbcrust_data_analysis.txt  hk.pkl  mise.toml  mkdocs.yml  pyproject.toml
.claude/skills/dbcrust-release/: SKILL.md
.claude/skills/dbcrust-release/scripts/: release.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-binaries.yml  bump-version.yml  ci.yml  docs.yml  publish-pypi.yml  release.yml  tag-release.yml
docs/: README.md  astro.config.mjs  configuration.md  django-analyzer.md  index.md  install.ps1  install.sh  installation.md  package.json  quick-start.md  requirements.txt
docs/advanced/: docker-integration.md  security.md  ssh-tunneling.md  vault-integration.md
docs/django/: ci-integration.md  management-commands.md  middleware.md  team-workflows.md
docs/python-api/: client-classes.md  direct-execution.md  django-integration.md  error-handling.md  examples.md  overview.md
docs/reference/: backslash-commands.md  configuration-reference.md  url-schemes.md
docs/src/content/docs/: configuration.md  django-analyzer.md  index.mdx  installation.mdx  quick-start.mdx
docs/src/content/docs/advanced/: docker-integration.md  security.md  ssh-tunneling.md  vault-integration.md
docs/src/content/docs/django/: ci-integration.md  dashboard.md  management-commands.md  middleware.md  team-workflows.md
docs/src/content/docs/python-api/: client-classes.md  direct-execution.md  django-integration.md  error-handling.md  examples.md  overview.md
docs/src/content/docs/reference/: backslash-commands.md  configuration-reference.md  url-schemes.md
docs/src/content/docs/user-guide/: advanced-features.md  ai-assistant.md  basic-usage.md  development.md  elasticsearch.md  file-formats.md  gui.md  mongodb.md  password-management.md  performance-analysis.md  troubleshooting.md
docs/src/styles/: custom.css
docs/user-guide/: advanced-features.md  basic-usage.md  elasticsearch.md  file-formats.md  mongodb.md  password-management.md  performance-analysis.md  troubleshooting.md
gui/: .taurignore  index.html  package-lock.json  package.json  tailwind.config.js
gui/src/: App.tsx  commands.ts  connectionDisplay.ts  index.css  queryPresets.ts  sqlAutocomplete.ts  sqlExecution.ts  tableMetadata.ts  types.ts
gui/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
gui/src/components/: ConnectionDialog.tsx  DockerDiscovery.tsx  Editor.tsx  ExplainView.tsx  Layout.tsx  Navigation.tsx  ResultsPanel.tsx  SavedConnections.tsx  SchemaExplorer.tsx  SettingsPage.tsx  Sidebar.tsx  StatusBar.tsx  VaultWizard.tsx
python/: dbcrust-cli  example.py
python/dbcrust/: __init__.py  __main__.py  client.py  connector.py  pytest_plugin.py
python/dbcrust/django/: README.md  __init__.py  ai_context.py  ai_jobs.py  analyzer.py  apps.py  code_analyzer.py  dashboard.py  database_helper.py  dbcrust_integration.py  django_explain.py  middleware.py  pattern_detector.py  project_analyzer.py  query_collector.py  recommendations.py  report_formatter.py  slow_query_analyzer.py  test_enhanced_analyzer.py  testing.py  urls.py  utils.py  views.py
python/dbcrust/django/management/commands/: dbcrust.py  dbcrust_ai.py  dbcrust_analyze.py
python/dbcrust/django/templates/dbcrust/: _ai_status.html  _issue_section.html  _request_detail.html  _request_list.html  dashboard.html
python/dbcrust/django/tests/: conftest.py  test_ai_context.py  test_analyzer.py  test_dashboard.py  test_django_explain.py  test_management_command.py  test_middleware.py  test_report_formatter.py  test_slow_query_analyzer.py  test_testing_helpers.py  urls.py
python/dbcrust/management/commands/: dbcrust.py
src/: backslash_commands.rs  cli.rs  cli_core.rs  command_completion.rs  commands.rs  completion.rs  completion_provider.rs  complex_display.rs  config.rs  config_editor.rs  database.rs  database_clickhouse.rs  database_datafusion.rs  database_elasticsearch.rs  database_mongodb.rs  database_mysql.rs  database_postgresql.rs  database_sqlite.rs  db.rs  dbcrust_pass.rs  docker.rs  format.rs  geojson_display.rs  highlighter.rs  history_manager.rs  json_display.rs  lib.rs  logging.rs  main.rs  myconf.rs  named_queries.rs  pager.rs  password_encryption.rs  password_sanitizer.rs  performance_analyzer.rs  pgpass.rs  prompt.rs  script.rs  shell_completion.rs  sql_buffer.rs  (+12 more)
src/ai/: agent.rs  chatgpt_auth.rs  config.rs  conversation.rs  key_storage.rs  mod.rs  model_listing.rs  prompt_templates.rs  schema_context.rs  streaming.rs
src/ai_sql/: cache.rs  client.rs  config.rs  dialect.rs  error.rs  mod.rs  oauth.rs  oauth_pkce.rs  prompt.rs  schema.rs  ui.rs
src/explain_tui/: app.rs  mod.rs  plan_tree.rs  ui.rs
src/schema_tui/: app.rs  mod.rs  schema_data.rs  ui.rs
