[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "dbcrust"
version = "0.27.1"
description = "High-performance database CLI engineered for Django developers — Advanced ORM analysis, performance optimization, SSH tunneling, and seamless multi-database support (PostgreSQL, MySQL, SQLite)"
authors = [{ name = "Clément Tourrière", email = "clement.tourriere@gmail.com" }]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "dbcrust", "database", "postgres", "mysql", "sqlite", "cli", "interactive",
    "sql", "postgresql", "mysql", "sqlite", "ssh-tunnel", "vault", "docker",
    "django", "orm", "python-library", "performance-analysis", "n-plus-one"
]
readme = "README.md"
homepage = "https://github.com/clement-tourriere/dbcrust"
repository = "https://github.com/clement-tourriere/dbcrust"
documentation = "https://github.com/clement-tourriere/dbcrust#readme"
changelog = "https://github.com/clement-tourriere/dbcrust/blob/main/CHANGELOG.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Environment :: Console",
    "Framework :: Django",
    "Intended Audience :: Information Technology",
]

[project.urls]
"Homepage" = "https://github.com/clement-tourriere/dbcrust"
"Repository" = "https://github.com/clement-tourriere/dbcrust"
"Documentation" = "https://github.com/clement-tourriere/dbcrust#readme"
"Changelog" = "https://github.com/clement-tourriere/dbcrust/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/clement-tourriere/dbcrust/issues"
"Source Code" = "https://github.com/clement-tourriere/dbcrust"

[project.optional-dependencies]
# Django is only needed for the dbcrust.django analysis toolkit:
# pip install "dbcrust[django]"
django = ["Django>=4.2"]

[dependency-groups]
dev = ["pytest>=8", "Django>=4.2", "ruff"]

[tool.maturin]
bindings = "pyo3"
module-name = "dbcrust._internal"
strip = true
python-source = "python"
features = ["python"]
# Keep demo/scratch/test files out of the shipped wheel
exclude = [
    "python/dbcrust/django/tests/**",
    "python/dbcrust/django/test_enhanced_analyzer.py",
    "python/dbcrust/django/test_middleware_demo.py",
    "python/dbcrust/django/example.py",
    "python/dbcrust/django/example_middleware_usage.py",
    "python/dbcrust/django/debug_logging.py",
    "python/dbcrust/django/troubleshoot_logging.py",
    "python/example.py",
]

[project.scripts]
dbc = "dbcrust.__main__:main"
dbcrust = "dbcrust.__main__:main"

[project.entry-points.pytest11]
# Query-budget fixtures (dbcrust.django.testing); inert without Django
dbcrust = "dbcrust.pytest_plugin"

[tool.pytest.ini_options]
testpaths = ["python/dbcrust/django/tests"]
