[package]
name = "dbcrust-gui"
version = "0.1.0"
edition = "2021"
description = "DBCrust GUI — A modern database management interface powered by Tauri"
default-run = "dbcrust-gui"

[lib]
name = "dbcrust_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dbcrust-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dbcrust = { path = "../..", default-features = false }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
