[package]
name = "dbcrust-gui"
version = "0.1.0"
edition = "2021"
description = "DBCrust GUI — A modern database management interface powered by Tauri"
default-run = "dbcrust-gui"

[lib]
name = "dbcrust_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dbcrust-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dbcrust = { path = "../..", default-features = false }
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[package.metadata.cargo-machete]
ignored = ["tauri-build"]
